# protoc-gen-struct-transformer

./: .gitignore  BUILD.bazel  Makefile  README.md  WORKSPACE  buf.gen.yaml  buf.yaml  go.mod  go.sum  main.go  shell.nix
example/: BUILD.bazel  message.pb.go
example/helpers/: BUILD.bazel  helpers.go
example/model/: BUILD.bazel  model.go
example/nulls/: BUILD.bazel
example/transform/: BUILD.bazel  custom_transformer.go  message_transformer.go
generator/: BUILD.bazel  field.go  field_test.go  file.go  file_test.go  generator_suite_test.go  message.go  message_test.go  option_extractor.go  types.go
generator/testdata/: BUILD.bazel
options/: BUILD.bazel  annotations.pb.go  annotations.proto
source/: BUILD.bazel  parser.go  parser_test.go
