load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/innovation-upstream/protoc-gen-struct-transformer
# gazelle:proto disable
# gazelle:go_naming_convention go_default_library
gazelle(
    name = "gazelle",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/innovation-upstream/protoc-gen-struct-transformer",
    visibility = ["//visibility:private"],
    deps = [
        "//generator:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor:go_default_library",
        "@com_github_gogo_protobuf//protoc-gen-gogo/plugin:go_default_library",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@org_golang_x_tools//imports:go_default_library",
    ],
)

go_binary(
    name = "__do_not_match__",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
