load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/innovation-upstream/protoc-gen-struct-transformer
# gazelle:proto disable
gazelle(
    name = "gazelle",
)

go_binary(
    name = "__do_not_match__",
    embed = [":protoc-gen-struct-transformer_lib"],
    visibility = ["//visibility:public"],
)

go_library(
    name = "protoc-gen-struct-transformer_lib",
    srcs = ["main.go"],
    importpath = "github.com/innovation-upstream/protoc-gen-struct-transformer",
    visibility = ["//visibility:private"],
    deps = [
        "//generator",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor",
        "@com_github_gogo_protobuf//protoc-gen-gogo/plugin",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_pkg_errors//:errors",
        "@org_golang_x_tools//imports",
    ],
)
