load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "generator",
    srcs = [
        "doc.go",
        "error.go",
        "field.go",
        "file.go",
        "message.go",
        "message_options.go",
        "oneof.go",
        "option_extractor.go",
        "print.go",
        "request.go",
        "template.go",
        "types.go",
    ],
    importpath = "github.com/innovation-upstream/protoc-gen-struct-transformer/generator",
    visibility = ["//visibility:public"],
    deps = [
        "//options",
        "//source",
        "@com_github_gogo_protobuf//gogoproto",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor",
        "@com_github_gogo_protobuf//protoc-gen-gogo/plugin",
        "@com_github_iancoleman_strcase//:strcase",
        "@com_github_pkg_errors//:errors",
    ],
)

go_test(
    name = "generator_test",
    srcs = [
        "field_test.go",
        "file_test.go",
        "generator_suite_test.go",
        "message_test.go",
        "oneof_test.go",
        "request_test.go",
        "template_test.go",
    ],
    embed = [":generator"],
    deps = [
        "//options",
        "//source",
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor",
        "@com_github_onsi_ginkgo//:ginkgo",
        "@com_github_onsi_ginkgo//extensions/table",
        "@com_github_onsi_gomega//:gomega",
        "@com_github_onsi_gomega//gstruct",
        "@com_github_pkg_errors//:errors",
    ],
)
