load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "options",
    srcs = [
        "annotations.pb.go",
        "doc.go",
    ],
    importpath = "github.com/innovation-upstream/protoc-gen-struct-transformer/options",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gogo_protobuf//proto",
        "@com_github_gogo_protobuf//protoc-gen-gogo/descriptor",
    ],
)
