load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["model.go"],
    importpath = "__do_not_match__/example/model",
    visibility = ["//visibility:public"],
    deps = ["@com_github_innovation_upstream_protoc_gen_struct_transformer//example/nulls:go_default_library"],
)
